[project]
name = "audiobooks"
version = "0.1.0"
description = "Convert PDFs into audioboks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "trillim[voice]>=0.12.2",
    "uvicorn[standard]>=0.40.0",
]
